add validation to donate input

--- a/pages/donate/style.css
+++ b/pages/donate/style.css
@@ -195,7 +195,7 @@ logo__container {
     position: relative;
     background: url('../../assets/images/panda.png') no-repeat;
     height: 315px;
-    background-size: 100%;
+    background-size: cover;
 }
 
 /* section watch ends*/
